SERVER-27392 fix bug in FTS index's check for indexed arrays