src/mongo/db/bson/dotted_path_support_test.cpp
@@ -570,5 +570,41 @@ TEST(ExtractAllElementsAlongPath, MidPathSingletonArrayIsConsideredAnArrayCompon
     assertArrayComponentsAreEqual({1U}, actualArrayComponents);
 }
 
+TEST(ExtractElementAtPathOrArrayAlongPath, ReturnsArrayEltWithEmptyPathWhenArrayIsAtEndOfPath) {
+    BSONObj obj(fromjson("{a: {b: {c: [1, 2, 3]}}}"));
+    StringData path("a.b.c");
+    const char* pathData = path.rawData();
+    auto resultElt = dps::extractElementAtPathOrArrayAlongPath(obj, pathData);
+    ASSERT_BSONELT_EQ(resultElt, fromjson("{c: [1, 2, 3]}").firstElement());
+    ASSERT(StringData(pathData).empty());
+}
+
+TEST(ExtractElementAtPathOrArrayAlongPath, ReturnsArrayEltWithNonEmptyPathForArrayInMiddleOfPath) {
+    BSONObj obj(fromjson("{a: {b: [{c: 1}, {c: 2}]}}"));
+    StringData path("a.b.c");
+    const char* pathData = path.rawData();
+    auto resultElt = dps::extractElementAtPathOrArrayAlongPath(obj, pathData);
+    ASSERT_BSONELT_EQ(resultElt, fromjson("{b: [{c: 1}, {c: 2}]}").firstElement());
+    ASSERT_EQ(StringData(pathData), StringData("c"));
+}
+
+TEST(ExtractElementAtPathOrArrayAlongPath, NumericalPathElementNotTreatedAsArrayIndex) {
+    BSONObj obj(fromjson("{a: [{'0': 'foo'}]}"));
+    StringData path("a.0");
+    const char* pathData = path.rawData();
+    auto resultElt = dps::extractElementAtPathOrArrayAlongPath(obj, pathData);
+    ASSERT_BSONELT_EQ(resultElt, obj.firstElement());
+    ASSERT_EQ(StringData(pathData), StringData("0"));
+}
+
+TEST(ExtractElementAtPathOrArrayAlongPath, NumericalPathElementTreatedAsFieldNameForNestedObject) {
+    BSONObj obj(fromjson("{a: {'0': 'foo'}}"));
+    StringData path("a.0");
+    const char* pathData = path.rawData();
+    auto resultElt = dps::extractElementAtPathOrArrayAlongPath(obj, pathData);
+    ASSERT_BSONELT_EQ(resultElt, fromjson("{'0': 'foo'}").firstElement());
+    ASSERT(StringData(pathData).empty());
+}
+
 }  // namespace
 }  // namespace mongo
